[project]
name = "skyprocoursework-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Podtopkin",email = "podtopkinalexei@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[black]
max-line-length = 119

[isort]
max-line-length = 119

[mypy]
disallow_untyped_defs = "true"
warn_return_any = "true"

